//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.procman.command;

import "spine/options.proto";
import "spine/server/entity/entity.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.procman.command";
option java_outer_classname = "ProcmanCommandsProto";
option java_multiple_files = true;

import "spine/test/procman/project.proto";

message PmCreateProject {
    ProjectId project_id = 1;
}

message PmAddTask {
    ProjectId project_id = 1;
    Task task = 2;
}

message PmStartProject {
    ProjectId project_id = 1;
}

message PmReviewBacklog {
    ProjectId project_id = 1;
}

// A command, which does not modify a process manager state.
message PmDoNothing {
    ProjectId project_id = 1;
}

// A command, which always causes StandardRejections.EntityAlreadyArchived to be thrown.
message PmThrowEntityAlreadyArchived {
    ProjectId project_id = 1;
}

message PmArchiveProcess {
    ProjectId project_id = 1;
}

message PmDeleteProcess {
    ProjectId project_id = 1;
}
